Updated CRUD for groups
