# src/app/Http/Requests/api/Group/GroupStoreRequest.php
@@ -1,10 +1,10 @@
 <?php
 
-namespace App\Http\Requests\api\Expense;
+namespace App\Http\Requests\api\Group;
 
 use Illuminate\Foundation\Http\FormRequest;
 
-class StoreRequest extends FormRequest
+class GroupStoreRequest extends FormRequest
 {
     /**
      * Determine if the user is authorized to make this request.
@@ -22,10 +22,7 @@ class StoreRequest extends FormRequest
     public function rules(): array
     {
         return [
-            'group_id' => 'required|exists:groups,id',
-            'payee_id' => 'required|exists:users,id',
-            'name' => 'required|string|max:255',
-            'price' => 'required|integer',
+            'name' => 'required|min:1|max:255'
         ];
     }
 }
